[project]
name = "mystery-shop"
version = "0.1.0"
description = "Mystery shopping system for prospective restaurant leads — calls, transcribes, extracts, scores."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mystery-shop = "mystery_shop.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
